v1/license-end-users/activate-license.mdx
---
title: "Activating Your License"
---

<Warning>
You must be on Bruno v.1.35.0 or higher to activate a license after December 1, 2024
</Warning>

If you've been provisioned a license, you should have received a license key via email. If you have not received a key and already checked your spam folder, please reach out to your license administrator.

### Step 1: Click on the Settings or Key icon in Bruno

Both icons are located at the bottom left corner of the Bruno window. The Key icon will take you directly to the `License` section. If you choose to use the Settings icon, simply select `License` from the settings menu. 

### Step 2: Enter License Details 

Enter your license key and associated email address

![login](/images/screenshots/license-management/activatelicense.webp)

<Info>
If your company uses a self-hosted licensing server, select `License Server` and enter the details provided to you by your License Administrator. 
</Info>

### Step 4: License Activated

Once the license is activated, you will see a success message.
