v2/license-end-users/activate-license.mdx
---
title: "Activating Your License"
sidebarTitle: "Activate License"
---

import { PremiumBadge } from "/snippets/premium-badge.jsx";

<Warning>
You must be on Bruno v.1.35.0 or higher to activate a license after December 1, 2024
</Warning>

## Activating with License Key

If you've been provisioned a license, you should have received a license key via email. If you have not received a key and already checked your spam folder, please reach out to your license administrator.

### Step 1: Click on the Settings or Key icon in Bruno

Both icons are located at the bottom left corner of the Bruno window. The Key icon will take you directly to the `License` section. If you choose to use the Settings icon, simply select `License` from the settings menu.

### Step 2: Enter License Details

Enter your license key and associated email address

![login](/v2/images/screenshots/license-management/activatelicense.webp)

<Info>
If your company uses a self-hosted licensing server, select `License Server` and enter the details provided to you by your License Administrator.
</Info>

### Step 3: License Activated

Once the license is activated, you will see a success message.

## Activating with SSO <PremiumBadge noLink />

<Info>
SSO license activation is available for Ultimate Edition customers. Please see the [SAML SSO Overview](/v2/license-administrators/saml-sso/overview) for more information.
</Info>

### Step 1: Click on the Settings or Key icon in Bruno

Both icons are located at the bottom left corner of the Bruno window. The Key icon will take you directly to the `License` section. If you choose to use the Settings icon, simply select `License` from the settings menu.

### Step 2: Activate with SSO

If your company has configured SSO for Bruno, select `SSO` and click `Activate License`.

![login](/v2/images/screenshots/license-management/activate-sso.webp)

<Info>
Your email needs to be part of the SSO configuration in order to activate your license, with the `User Role` mapped. See [Role Mapping](/v2/license-administrators/saml-sso/overview#role-mapping) for details.
</Info>

### Step 3: SSO Login

You will be redirected to your corporate SSO login page. Enter your credentials to login.

A successful login message will be displayed.

![login](/v2/images/screenshots/license-management/activate-message-success.webp)

Returning to Bruno, you will see the license as activated.
